--- a/Instagram/Instagram.csproj
+++ b/Instagram/Instagram.csproj
@@ -7,6 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="wwwroot\css\Register.css" />
+    <None Include="wwwroot\imgInstagram\logotipo-instagram-2016.jpg" />
+    <None Include="wwwroot\imgInstagram\O6iPQNNjTn9.png" />
+    <None Include="wwwroot\imgInstagram\piglPIPOKiJ.png" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.30" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="6.0.30" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.30">
